<resources>
    <string name="app_name">kfu_itis_android_tasks</string>
    <string name="profile">Profile</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_text">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="no_cards_in_db">The cards you create will be displayed here</string>
    <string name="difficulty">Difficulty: %1$s</string>
    <string name="instruments">Instruments: %1$s</string>
    <string name="description">Description: %1$s</string>
    <string name="create_new_card">Create new card</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="difficulty_beginner">Beginner</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_master">Master</string>
    <string name="choose_difficulty">Difficulty</string>
    <string name="write_instruments">Instruments</string>
    <string name="write_description">Description</string>
    <string name="profile_phone">Phone: %1$s</string>
    <string name="profile_username">Username: %1$s</string>
    <string name="profile_email">Email: %1$s</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="delete_account">Delete account</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_repeat">Repeat new password</string>
    <string name="filter">Sort by</string>
    <string name="username_error">Username must contain from 3 to 16 letters</string>
    <string name="phone_error">Phone must contain 11 digits</string>
    <string name="email_error">Incorrect email</string>
    <string name="password_digits_match_error">Password must contain letters</string>
    <string name="password_letters_match_error">Password must contain digits</string>
    <string name="password_error">Password must be at least 8 characters long and must contain letters and digits</string>
    <string name="passwords_not_equals_error">Passwords not equals</string>
    <string name="account_created">Account was successfully created</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="delete_message">Account can be restored within 7 days, then it will be permanently deleted</string>
    <string name="user_not_found_error">Account with this email not found</string>
    <string name="incorrect_password_error">Invalid password</string>
    <string name="duration">Production time</string>
    <string name="image">Image link</string>
    <string name="card_created">Card was successfully created</string>
    <string name="old_password_error">Old password entered incorrectly</string>
    <string name="time">Production time(min): %1$d</string>
    <string name="rating">Rating: %1$s</string>
    <string name="email_already_exist">This email already registered</string>
    <string name="phone_already_exist">This phone already registered</string>
    <string name="main">Knitting patterns</string>
    <string name="empty_field_error">Field must be not empty</string>
    <string name="card_already_exist_error">Such pattern already exist</string>
</resources>